[package]
name = "mmap-bitvec"
version = "0.4.0"
authors = ["Roderick Bovee <roderick@onecodex.com>"]
description = "A library for working with bit-vectors backed by memory-mapped files"
keywords = ["bitvec", "bitvector", "bioinformatics"]
categories = ["science", "data-structures"]
autobenches = false
edition = "2021"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/onecodex/mmap-bitvec"


[dependencies]
memmap2 = "0.5"
murmurhash3 = "0.0.5"
once_cell = "1.3.1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3.3.0"

[[bench]]
name = "benchmark"
harness = false